this is front-end project with html and bootstrap

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <h2>About Me</h2>
           </div>
           <hr>
-          <div class="content mt-3">
+          <p class="content mt-3">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. At unde dolores, sed consequuntur voluptates
             mollitia
             quod voluptas tenetur? Amet ullam doloribus aliquam deleniti distinctio, eos dignissimos magni
@@ -89,39 +89,39 @@
             recusandae suscipit sapiente debitis deleniti distinctio ea ipsam, magnam beatae odit fuga molestias
             perspiciatis veritatis culpa aut eum praesentium! Commodi, quo. Aliquam doloribus voluptatem nam. Esse quos
             provident impedit reprehenderit placeat.
-          </div>
+          </p>
           <div class="row ms-4 me-3 mt-5">
             <div class="col-sm-3">
-              <div class="number">
+              <p class="number">
                 15
-              </div>
-              <div class=".detail">
+              </p>
+              <p class=".detail">
                 AWARDS DONE
-              </div>
+              </p>
             </div>
             <div class="col-sm-3">
-              <div class="number">
+              <p class="number">
                 50
-              </div>
-              <div class=".detail">
+              </p>
+              <p class=".detail">
                 PROJECTS DONE
-              </div>
+              </p>
             </div>
             <div class="col-sm-3">
-              <div class="number">
+              <p class="number">
                 45
-              </div>
-              <div class=".detail">
+              </p>
+              <p class=".detail">
                 HAPPY CLIENTS
-              </div>
+              </p>
             </div>
             <div class="col-sm-3">
-              <div class="number">
+              <p class="number">
                 5000
-              </div>
-              <div class=".detail">
+              </p>
+              <p class=".detail">
                 ALL SHOOTS
-              </div>
+              </p>
             </div>
           </div>
           <button class="contact-me mt-4 ">
